<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="16dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#263238"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="16dp" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/myTitle"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#eceff1"
        android:layout_margin="30dp" />

    <Button
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotifyStreamer"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:onClick="sendMessage"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/superDuo1"
        android:id="@+id/button2"
        android:onClick="sendMessage"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/superDuo2"
        android:id="@+id/button3"
        android:onClick="sendMessage"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buildBIG"
        android:id="@+id/button4"
        android:onClick="sendMessage"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyzReader"
        android:id="@+id/button5"
        android:onClick="sendMessage"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/Buttons.Capstone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:onClick="sendMessage"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true" />

</LinearLayout>
